--- a/FeeLoop/Base.lproj/Main.storyboard
+++ b/FeeLoop/Base.lproj/Main.storyboard
@@ -214,6 +214,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="c7g-nE-3Dk"/>
+        <segue reference="D4I-k4-AZs"/>
     </inferredMetricsTieBreakers>
 </document>
